@@ -1,5 +1,10 @@
 2012-11-20  Sergio Martin <sergio.martin@artica.es>
 
+	* pandora_windows_service.cc: Fixed some bugs
+	of the type conversions 
+
+2012-11-20  Sergio Martin <sergio.martin@artica.es>
+
 	* pandora_windows_service.cc: Added support for
 	custom fields
 
